--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -21,6 +20,7 @@
       <li><a href="#projects">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
+    <div class="menu-toggle">&#9776;</div>
   </nav>
 
   <!-- Hero Section -->
@@ -35,15 +35,10 @@
   <!-- About -->
   <section id="about">
     <h2>About Me</h2>
-    <p>Hi, I'm Mai Yasser, a passionate developer from
-      Egypt, with a keen eye for design and a deep
-      appreciation for clean, efficient code.
-      Currently, I have a solid foundation in HTML, CSS,
-      and JavaScript, and experience in problem-solving
-      with C++. With determination and learning, I aspire
-      to become a proficient developer with innovative
-      ideas and a strong vision, ready to compete in the
-      tech industry.</p>
+    <p>Hi, I'm Mai Yasser, a passionate web developer from Egypt with a keen eye for design and a deep appreciation for
+      clean, efficient code. I have solid experience in HTML, CSS, JavaScript and PHP. With determination and continuous
+      learning, I aspire to create innovative and responsive web applications while contributing effectively to the tech
+      industry.</p>
   </section>
 
   <!-- Education -->
@@ -63,7 +58,11 @@
       <span>JavaScript</span>
       <span>Bootstrap</span>
       <span>PHP</span>
-      <span>C++</span>
+      <span>MySQL</span>
+      <span>SQL Server</span>
+      <span>Git</span>
+      <span>GitHub</span>
+      <span>CRUD Operations</span>
     </div>
   </section>
 
@@ -72,15 +71,19 @@
     <h2>Work Experience</h2>
     <div class="card">
       <h3>Front-End Web Development Trainee - NCW</h3>
-      <p>• Gained practical experience in building responsive and interactive web pages using HTML, CSS, and JavaScript.</p>
-      <p>• Enhanced understanding of UI/UX best practices and modern front-end development workflows.</p>
+      <p>Built responsive web pages using HTML, CSS, and JavaScript, while learning UI/UX best practices.</p>
     </div>
     <div class="card">
       <h3>Full-Stack Web Development Trainee - NTI</h3>
-      <p>• Trained in back-end development with PHP and database integration.</p>
-      <p>• Worked on developing dynamic web applications, strengthening both front-end and back-end skills.</p>
+      <p>Developed dynamic web applications with PHP and MySQL, strengthening front-end and back-end skills.</p>
+    </div>
+    <div class="card">
+      <h3>Full-Stack .NET Web Development Trainee - DEPI (Ongoing)</h3>
+      <p>Designing full-stack web applications using ASP.NET Core, C#, Entity Framework, SQL Server, and responsive
+        front-end with HTML, CSS, JavaScript, and Bootstrap.</p>
     </div>
   </section>
+
 
   <!-- Projects -->
   <section id="projects">
@@ -88,15 +91,20 @@
     <div class="projects-grid">
       <div class="card">
         <h3>E-Commerce Platform</h3>
-        <p>Furniture store with cart system, product listings, and checkout flow.</p>
+        <p>Furniture store with cart system, product listings, and checkout flow using Full-Stack PHP.</p>
       </div>
       <div class="card">
         <h3>To-Do App</h3>
-        <p>Task manager with add/edit/delete features and local storage support.</p>
+        <p>Task manager with add/edit/delete features and local storage support using JavaScript and HTML/CSS.</p>
       </div>
       <div class="card">
         <h3>Books Website</h3>
-        <p>Full-stack PHP app with authentication and CRUD operations for books.</p>
+        <p>Full-Stack PHP application with authentication, CRUD operations, and book management.</p>
+      </div>
+      <div class="card">
+        <h3>Hangman Game</h3>
+        <p>Interactive word-guessing game using HTML, CSS, and JavaScript with real-time feedback on correct and
+          incorrect guesses.</p>
       </div>
     </div>
   </section>
@@ -114,6 +122,7 @@
   </footer>
 
   <script>
+    // Typing effect
     const text = "Front-End Web Developer";
     let i = 0;
     function typing() {
@@ -124,6 +133,14 @@
       }
     }
     typing();
+
+    // Mobile menu toggle
+    const menuToggle = document.querySelector('.menu-toggle');
+    const navLinks = document.querySelector('.nav-links');
+
+    menuToggle.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+    });
   </script>
 </body>
 
